force-app/main/default/objects/HubSpot_Inc__HubSpot_Intelligence__c/fields/HubSpot_Inc__Changes__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Inc__Changes__c</fullName>
    <description>This field stores an XML document of changes to be sent to HubSpot.  The XML document is created and maintained by triggers on Lead, Contact, and Opportunity records.</description>
    <label>Outgoing Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>