force-app/main/default/objects/HubSpot_Inc__HubSpot_Intelligence__c/fields/HubSpot_Inc__Contact__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Inc__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce Contact associated with this record.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HubSpot Intelligence</relationshipLabel>
    <relationshipName>HubSpot_Intelligence</relationshipName>
    <type>Lookup</type>
</CustomField>