force-app/main/default/objects/HubSpot_Inc__HubSpot_Intelligence__c/fields/HubSpot_Inc__Conversion_Events__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Inc__Conversion_Events__c</fullName>
    <label>Conversion Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>