force-app/main/default/objects/HubSpot_Inc__HubSpot_Intelligence__c/fields/HubSpot_Inc__First_Visit__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Inc__First_Visit__c</fullName>
    <label>First Visit</label>
    <type>DateTime</type>
</CustomField>