force-app/main/default/objects/HubSpot_Inc__HubSpot_Intelligence__c/fields/HubSpot_Inc__Found_Site_Via__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Inc__Found_Site_Via__c</fullName>
    <label>Found Site Via</label>
    <length>255</length>
    <type>Text</type>
</CustomField>