force-app/main/default/objects/HubSpot_Inc__HubSpot_Intelligence__c/fields/HubSpot_Inc__Has_Changes__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Inc__Has_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An indicator used by HubSpot to query for records that contain XML documents with changed data to be processed by HubSpot which is populated by triggers on the Salesforce objects.</description>
    <label>Has Changes</label>
    <type>Checkbox</type>
</CustomField>