force-app/main/default/objects/HubSpot_Inc__HubSpot_Intelligence__c/fields/HubSpot_Inc__HubSpot_Detail__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Inc__HubSpot_Detail__c</fullName>
    <label>HubSpot Detail</label>
    <type>Url</type>
</CustomField>