force-app/main/default/objects/HubSpot_Inc__HubSpot_Intelligence__c/fields/HubSpot_Inc__Incoming_Changes__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Inc__Incoming_Changes__c</fullName>
    <description>Incoming changes from HubSpot in the form of an XML document.  To see documents passed from HubSpot in the HubSpot Logs, set Logging Level to Debug in HubSpot Settings, otherwise this field will always be cleared by the triggers which process the data.</description>
    <label>Incoming Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>