force-app/main/default/objects/HubSpot_Inc__HubSpot_Intelligence__c/fields/HubSpot_Inc__IP_Address__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Inc__IP_Address__c</fullName>
    <label>IP Address</label>
    <length>40</length>
    <type>Text</type>
</CustomField>