force-app/main/default/objects/HubSpot_Inc__HubSpot_Intelligence__c/fields/HubSpot_Inc__IP_Country__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Inc__IP_Country__c</fullName>
    <label>IP Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>