force-app/main/default/objects/HubSpot_Inc__HubSpot_Intelligence__c/fields/HubSpot_Inc__IP_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Inc__IP_Time_Zone__c</fullName>
    <label>IP Time Zone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>