force-app/main/default/objects/HubSpot_Inc__HubSpot_Intelligence__c/fields/HubSpot_Inc__IP_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Inc__IP_Zip_Code__c</fullName>
    <label>IP Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>