force-app/main/default/objects/HubSpot_Inc__HubSpot_Intelligence__c/fields/HubSpot_Inc__Lead__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Inc__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce Lead related to this record.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>HubSpot Intelligence</relationshipLabel>
    <relationshipName>HubSpot_Intelligence</relationshipName>
    <type>Lookup</type>
</CustomField>