force-app/main/default/objects/HubSpot_Inc__HubSpot_Intelligence__c/fields/HubSpot_Inc__Recent_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Inc__Recent_Conversion_Date__c</fullName>
    <label>Recent Conversion Date</label>
    <type>DateTime</type>
</CustomField>