force-app/main/default/objects/HubSpot_Inc__HubSpot_Intelligence__c/fields/HubSpot_Inc__Unique_Pages_Viewed__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Inc__Unique_Pages_Viewed__c</fullName>
    <label>Unique Pages Viewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>