force-app/main/default/objects/HubSpot_Inc__HubSpot_Intelligence__c/listViews/HubSpot_Inc__Intels.listView-meta.xml
<ListView>
    <fullName>HubSpot_Inc__Intels</fullName>
    <columns>NAME</columns>
    <columns>HubSpot_Inc__GUID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Intels</label>
</ListView>